# LCG

./: CMakeLists.txt  index.md  main.cpp
src/: experiment.cpp  experiments.h  generator.cpp  generator.h  num_threads.cpp
